
plugins {
    id 'java'
    id 'application'
}

java.sourceCompatibility "1.16"
java.targetCompatibility "1.16"

group 'edu.rit.iste-422'
version '1.0-SNAPSHOT'

ext {
    javaMainClass = 'Runner'
}
java {
    mainClassName = 'com.FrontRowProj.RunEdgeConvert'
}

test {
    testLogging.showStandardStreams = true
}

application {
    mainClass = javaMainClass
}

task runApp(type: JavaExec) {
    group = "Execution"
    description = "Run RunEdgeConvert class"
    classpath = sourceSets.test.runtimeClasspath
    main = "RunEdgeConvert"
}

task obfuscator(type: JavaExec) {
    main = 'Obfuscator'
        classpath = sourceSets.test.runtimeClasspath
}

repositories {
    mavenCentral()
}


tasks.withType(Checkstyle) {
	reports {
		html.required = true
	}
}



dependencies {
    testImplementation 'junit:junit:4.12'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
}
